Add Docker Java API foundation
